2004-01-14 Kilian Krause <kk@verfaction.de>

	* src/chat_window.cpp, src/chat_window.h, src/endpoint.cpp,
	src/ldap_window.cpp: code cleanup and bugfixes as provided by 
	Julien Puydt aka Snark <julien.puydt@laposte.net>. Text chat will now
	be printing a call start/end notification in the text chat window.
	Thanks!

2004-01-14 Kilian Krause <kk@verfaction.de>

	* configure.in, lib/xdap/xdap.c: libxml2 no longer forced to be 2.6.
	Patch provided by Stefan Bruens <lurch@gmx.li>. Thanks!
	
2004-01-14 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/chat_window.cpp, src/ldap_window.cpp,
	src/ldap_window.h: Added patch from Julien Puydt to add the possibility
	to add users from the text chat by right-clicking on their URLs,
	and to add support for various URLs formats. Also contains code
	cleanups.
	
2004-01-13 Kilian Krause <kk@verfaction.de>

	* src/chat_window.cpp, file src/common.h: added patch from Julien
	Puydt aka Snark <julien.puydt@laposte.net> as code cleanup to the
	text chat.
	
2004-01-11 Kilian Krause <kk@verfaction.de>

	* src/chat_window.cpp: fixed missing include as proposed by Damien
	Sandras <dsandras@seconix.com>

2004-01-11 Kilian Krause <kk@verfaction.de>

	* po/de.po: fixed broken UTF8 strings (fix provided by Stefan 
	Bruens <lurch@gmx.li>)
	
2004-01-11 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Added some comments to functions.
	
2004-01-11 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest CVS News.
	
	* configure.in: Incremented SCHEMA_AGE. Incremented UNSTABLE version
	to 0.99.2 as most features are now in the code.
	
	* gnomemeeting.schemas.in.in: Added keys to support Gateways (or
	proxies) like Asterisk.

	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h,
	lib/gnome_prefs_window.c: Do not change the GConf key after each
	key stroke, but only when the focus changes as suggested by
	the HIG.

	* src/common.h, src/config.cpp, src/endpoint.cpp, src/pref_window.cpp,