@@ -1,5 +1,9 @@
 2004-01-14 Kilian Krause <kk@verfaction.de>
 
+	* configure.in, lib/xdap/xdap.c: bugfixed previous commit ;)
+	
+2004-01-14 Kilian Krause <kk@verfaction.de>
+
 	* src/chat_window.cpp, src/chat_window.h, src/endpoint.cpp,
 	src/ldap_window.cpp: code cleanup and bugfixes as provided by 
 	Julien Puydt aka Snark <julien.puydt@laposte.net>. Text chat will now
